--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@types/node": "^16.11.57",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
+    "antd": "^4.23.0",
     "react": "^18.2.0",
+    "react-blur": "^1.1.1",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.2",
@@ -39,5 +41,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-config-react-app": "^7.0.1",
+    "jest-editor-support": "^30.1.0"
   }
 }
